Fazendo a pagina home

--- a/Site/Html/Index.html
+++ b/Site/Html/Index.html
@@ -4,9 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Css/Index.css">
     <title>Home</title>
 </head>
 <body>
+    <!--Cabeçalho-->
+    <header>
+        <div class="containerHeader">
+            <h1>Health fit</h1>
+            <div class="navbar">
+
+                <ul class="menu">
+                    <li>Inicio</li>
+                    <li>|</li>
+                    <li>Blog</li>
+                    <li>|</li>
+                    <li>Sobre nós</li>
+                </ul>
+                <div class="button">
+                    <button class="login" >Login</button>
+                    <button class="cadastro" onclick="cadastrar()">Cadastrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     
+    </header>
+    <!--Inicio-->
+    <div class="banner">
+        <div class="container">
+            <div class="frase">
+            <h2>Bem-vindo a Health Fit</h2> <br>
+            </div>
+            <span>O corpo <b>Alcança</b> o que a mente <b>Acredita!</b></span>
+        </div>
+    </div>
+
+    <!-- Blog -->
+
+    <div class="blog">
+        <div class="container">
+            <div class="blog">
+                <h1>Blog</h1>
+            </div>
+            <div class="artigos">
+                <div class="artigo1">
+                    <h2>A importância da atividade fisica</h2>
+                </div>
+                <div class="artigo2">
+                    <h2>A importância da amentação</h2>
+                </div>
+                <div class="artigo3">
+                    <h2>Como exercicitar sua mente </h2>
+                </div>
+                <div class="artigo4">
+                    <h2>Dicas de amentação e exercicios</h2>
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+
+    <!--Redes social-->
+
 </body>
 </html>
