Atualisei a imagem do background

--- a/Site/Html/Index.html
+++ b/Site/Html/Index.html
@@ -42,15 +42,15 @@
 
     <!-- Blog -->
 
-    <div class="blog">
+    <div class="areaBlog">
         <div class="container">
             <div class="blog">
                 <h1>Blog</h1>
             </div>
+            <div class="artigo1">
+                <h2>A importância da atividade fisica</h2>
+            </div>
             <div class="artigos">
-                <div class="artigo1">
-                    <h2>A importância da atividade fisica</h2>
-                </div>
                 <div class="artigo2">
                     <h2>A importância da amentação</h2>
                 </div>
