--- a/Site/Html/Index.html
+++ b/Site/Html/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,15 +15,21 @@
             <div class="navbar">
 
                 <ul class="menu">
-                    <li>Inicio</li>
+                    <a href="..//Html/Index.html">
+                        <li>Inicio</li>
+                    </a>
                     <li>|</li>
-                    <li>Blog</li>
+                    <a href="">
+                        <li>Blog</li>
+                    </a>
                     <li>|</li>
-                    <li>Sobre nós</li>
+                    <a href="">
+                        <li>Valores</li>
+                    </a>
                 </ul>
                 <div class="button">
                     <button class="login" >Login</button>
-                    <button class="cadastro" onclick="cadastrar()">Cadastrar</button>
+                    <button class="cadastro" onclick="cadastrar()"><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
         </div>
@@ -47,27 +53,75 @@
             <div class="blog">
                 <h1>Blog</h1>
             </div>
-            <div class="artigo1">
-                <h2>A importância da atividade fisica</h2>
-            </div>
             <div class="artigos">
-                <div class="artigo2">
-                    <h2>A importância da amentação</h2>
+           
+                <div class="artigoE">
+                    <a href="..//Html/AtividadeFisica.html">
+                        <ul>
+                            <li>
+                                <img src="..//Img/VetorAcad.jpg" alt="" width="500px">
+                                <h2>A importância da atividade fisica</h2>
+                            </li>
+                        </ul>
+                    </a>
                 </div>
-                <div class="artigo3">
-                    <h2>Como exercicitar sua mente </h2>
+                <div class="artigoD">
+                    <ul >
+                        <a href="..//Html/Alimento.html">
+                        <li>
+                            <img src="..//Img/VetorAlimento.jpg" alt="" width="130px">
+                            <h2>A importância da alimentação</h2>
+                        </li>
+                        </a>
+                        <a href="..//Html/ExercitarMente.html">
+                        <li>
+                            <img src="..//Img/CerebroExer.jpg" alt="" width="130px">
+                            <h2>Como exercicitar sua mente </h2>
+                        </li>
+                        </a>
+                        <a href="..//Html/MinhaHistoria.html">
+                            <li>
+                                <img src="..//Img/MinhaHis.jpg" alt="" width="130px">
+                                <h2>Minha Historia</h2>
+                            </li> 
+                        </a>
+                    </ul>
                 </div>
-                <div class="artigo4">
-                    <h2>Dicas de amentação e exercicios</h2>
-                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="social">
+        <div class="container">
+            <div class="valores">
+                <h1>Valores</h1>
 
             </div>
-
-
+            <div class="caixas">
+                <div class="caixa">
+                    <img src="">
+                    <h4>Missão</h4>
+                    <p>Construir o melhor site institucional do Brasil, por alunos SPTech.</p>
+                </div>
+                <div class="caixa">
+                    <img src="">
+                    <h4>Visão</h4>
+                    <p>Trazer a melhor experiência para o usuário em toda sua navegação do site.</p>
+                </div>
+                <div class="caixa">
+                    <img src="">
+                    <h4>Valores</h4>
+                    <p>Resiliência, Foco, Ética, Disciplina, Empatia, Coragem, Amor e Transparência</p>
+                </div>
+            </div>
         </div>
     </div>
-
     <!--Redes social-->
+    <div class="footer">
+        <div class="container">
+            <p>Samuel Mariano André - &copy; Copyright</p>
+        </div>
+    </div>
 
 </body>
 </html>
