Implantando o web-data-viz

--- a/Site/public/Html/Index.html
+++ b/Site/public/Html/Index.html
@@ -24,12 +24,12 @@
                     </a>
                     <li>|</li>
                     <a href="">
-                        <li>Valores</li>
+                        
                     </a>
                 </ul>
                 <div class="button">
-                    <button class="login" >Login</button>
-                    <button class="cadastro" onclick="cadastrar()"><a href="..//Html/cadastro.html">Cadastrar</a></button>
+                    <button class="login" ><a href="..//Html/cadastro.html">Login</a></button>
+                    <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
         </div>
@@ -91,31 +91,7 @@
         </div>
 
     </div>
-    <div class="social">
-        <div class="container">
-            <div class="valores">
-                <h1>Valores</h1>
-
-            </div>
-            <div class="caixas">
-                <div class="caixa">
-                    <img src="">
-                    <h4>Missão</h4>
-                    <p>Construir o melhor site institucional do Brasil, por alunos SPTech.</p>
-                </div>
-                <div class="caixa">
-                    <img src="">
-                    <h4>Visão</h4>
-                    <p>Trazer a melhor experiência para o usuário em toda sua navegação do site.</p>
-                </div>
-                <div class="caixa">
-                    <img src="">
-                    <h4>Valores</h4>
-                    <p>Resiliência, Foco, Ética, Disciplina, Empatia, Coragem, Amor e Transparência</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <!--Redes social-->
     <div class="footer">
         <div class="container">
