--- a/Site/public/Html/MinhaHistoria.html
+++ b/Site/public/Html/MinhaHistoria.html
@@ -19,11 +19,11 @@
                     <li>|</li>
                     <li>Blog</li>
                     <li>|</li>
-                    <li>Sobre nós</li>
+                    
                 </ul>
                 <div class="button">
-                    <button class="login" >Login</button>
-                    <button class="cadastro" onclick="cadastrar()">Cadastrar</button>
+                    <button class="login" onclick=""><a href="..//Html/cadastro.html">Login</a></button>
+                    <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
         </div>
