--- a/Site/public/Html/AtividadeFisica.html
+++ b/Site/public/Html/AtividadeFisica.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="Pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,11 +19,11 @@
                     <li>|</li>
                     <li>Blog</li>
                     <li>|</li>
-                    <li>Sobre nós</li>
+                   
                 </ul>
                 <div class="button">
-                    <button class="login" >Login</button>
-                    <button class="cadastro" onclick="cadastrar()">Cadastrar</button>
+                    <button class="login" onclick="" ><a href="..//Html/cadastro.html">Login</a></button>
+                    <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
         </div>
@@ -40,9 +40,9 @@
             <div class="texto">
                 Se você perguntar para uma pessoa se ela já exercitou o corpo esta semana, a chance de a resposta ser positiva é grande. Mas e o cérebro, você sabe quão importante é exercitá-lo?
 
-A verdade é que, muitas vezes, condicionamos o nosso cérebro a funções cada vez mais simples e repetitivas, que podem deixar a nossa massa cinzenta preguiçosa. Ou seja, no momento em que mais precisamos, temos aqueles chamados “brancos”, causados pelo baixo desempenho da memória. Com o tempo, se o cérebro não for exercitado com regularidade, sua capacidade produtiva pode diminuir e esses esquecimentos tendem a se intensificar.
+                A verdade é que, muitas vezes, condicionamos o nosso cérebro a funções cada vez mais simples e repetitivas, que podem deixar a nossa massa cinzenta preguiçosa. Ou seja, no momento em que mais precisamos, temos aqueles chamados “brancos”, causados pelo baixo desempenho da memória. Com o tempo, se o cérebro não for exercitado com regularidade, sua capacidade produtiva pode diminuir e esses esquecimentos tendem a se intensificar.
 
-Mas assim como a musculação auxilia os músculos na construção da massa magra, pesquisadores acreditam que seguir um estilo de vida saudável realizando exercícios cerebrais dentro de uma rotina também pode aumentar a reserva cognitiva do seu cérebro.
+                Mas assim como a musculação auxilia os músculos na construção da massa magra, pesquisadores acreditam que seguir um estilo de vida saudável realizando exercícios cerebrais dentro de uma rotina também pode aumentar a reserva cognitiva do seu cérebro.
             </div>
         </div>
     </div>
