--- a/Site/public/Html/ExercitarMente.html
+++ b/Site/public/Html/ExercitarMente.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Pt-BR">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,11 +19,11 @@
                     <li>|</li>
                     <li>Blog</li>
                     <li>|</li>
-                    <li></li>
+                    
                 </ul>
                 <div class="button">
-                    <button class="login" >Login</button>
-                    <button class="cadastro" onclick="cadastrar()">Cadastrar</button>
+                    <button class="login" ><a href="..//Html/cadastro.html">Login</a></button>
+                    <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
         </div>
