--- a/Site/public/Html/Index.html
+++ b/Site/public/Html/Index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/Index.css">
+    <link rel="stylesheet" href="../css/Index.css">
     <title>Home</title>
 </head>
 <body>
     <!--Cabeçalho-->
     <header>
         <div class="containerHeader">
-            <h1>Health fit</h1>
+            <div class="logo">
+
+                <h1>Health fit</h1>
+            </div>
             <div class="navbar">
 
                 <ul class="menu">
@@ -59,7 +62,7 @@
                     <a href="..//Html/AtividadeFisica.html">
                         <ul>
                             <li>
-                                <img src="..//Img/VetorAcad.jpg" alt="" width="500px">
+                                <img src="../assets/Img/VetorAcad.jpg" alt="" width="500px">
                                 <h2>A importância da atividade fisica</h2>
                             </li>
                         </ul>
@@ -69,19 +72,19 @@
                     <ul >
                         <a href="..//Html/Alimento.html">
                         <li>
-                            <img src="..//Img/VetorAlimento.jpg" alt="" width="130px">
+                            <img src="../assets/Img/VetorAlimento.jpg" alt="" width="130px">
                             <h2>A importância da alimentação</h2>
                         </li>
                         </a>
                         <a href="..//Html/ExercitarMente.html">
                         <li>
-                            <img src="..//Img/CerebroExer.jpg" alt="" width="130px">
+                            <img src="../assets/Img/CerebroExer.jpg" alt="" width="130px">
                             <h2>Como exercicitar sua mente </h2>
                         </li>
                         </a>
                         <a href="..//Html/MinhaHistoria.html">
                             <li>
-                                <img src="..//Img/MinhaHis.jpg" alt="" width="130px">
+                                <img src="../assets/Img/MinhaHis.jpg" alt="" width="130px">
                                 <h2>Minha Historia</h2>
                             </li> 
                         </a>
