--- a/Site/public/Html/Index.html
+++ b/Site/public/Html/Index.html
@@ -13,7 +13,9 @@
         <div class="containerHeader">
             <div class="logo">
 
-                <h1>Health fit</h1>
+                <a href="..//Html/Index.html">
+                    <h1>Health fit</h1>
+                </a>
             </div>
             <div class="navbar">
 
