--- a/Site/public/Html/cadastro.html
+++ b/Site/public/Html/cadastro.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="containerHeader">
-            <h1>Health fit</h1>
+            <a href="..//Html/Index.html">
+                <h1>Health fit</h1>
+            </a>
             <div class="navbar">
 
                 <ul class="menu">
@@ -21,7 +23,7 @@
                     
                 </ul>
                 <div class="button">
-                    <button class="login" onclick=""><a href="..//Html/cadastro.html">Login</a></button>
+                    <button class="login" onclick="">Login</a></button>
                     <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
@@ -32,17 +34,17 @@
     <div class="banner">
         <div class="container">
             <div class="caixa-formularioEsquerda">
-                <img src="..//Img/logoBranco.svg" class="logo">
+                <img src="../assets/Img/logo.svg" class="logo">
                 <h1>Health Fit</h1>
-                <img src="..//Img/Maromba.gif" class="maromba">
+                <img src="../assets/Img/Maromba.gif" class="maromba">
             </div>
             <div class="caixa-formularioDireita">
                 <div class="caixaLogo">
-                    <img src="..//Img/logo.svg" class="logo">
+                    <img src="../assets/Img/logo.svg" class="logo">
                 </div>
                 <div class="opcao">
                     <button onclick="">Cadastro</button>
-                    <button onclick="">Logar</button>
+                    
                 </div>
                 <div class="campos">
                     <div class="campo">
