--- a/Site/public/Html/MinhaHistoria.html
+++ b/Site/public/Html/MinhaHistoria.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/Index.css">
     <link rel="stylesheet" href="..//Css/ExerMente.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="containerHeader">
-            <h1>Health fit</h1>
+            <a href="..//Html/Index.html">
+                <h1>Health fit</h1>
+            </a>
             <div class="navbar">
 
                 <ul class="menu">
