Finalizando a tela de login

--- a/Site/public/Html/AtividadeFisica.html
+++ b/Site/public/Html/AtividadeFisica.html
@@ -18,12 +18,14 @@
                 <ul class="menu">
                     <li>Inicio</li>
                     <li>|</li>
-                    <li>Blog</li>
+                    <a href="#blogMove">
+                        <li>Blog</li>
+                    </a>
                     <li>|</li>
                    
                 </ul>
                 <div class="button">
-                    <button class="login" onclick="" ><a href="..//Html/cadastro.html">Login</a></button>
+                    <button class="login" onclick=""><a href="../Html/Login.html">Login</a></button>
                     <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
