--- a/Site/public/Html/Index.html
+++ b/Site/public/Html/Index.html
@@ -24,16 +24,13 @@
                         <li>Inicio</li>
                     </a>
                     <li>|</li>
-                    <a href="">
+                    <a href="#blogMove">
                         <li>Blog</li>
                     </a>
                     <li>|</li>
-                    <a href="">
-                        
-                    </a>
                 </ul>
                 <div class="button">
-                    <button class="login" ><a href="..//Html/cadastro.html">Login</a></button>
+                    <button class="login" onclick=""><a href="../Html/Login.html">Login</a></button>
                     <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
@@ -53,7 +50,7 @@
 
     <!-- Blog -->
 
-    <div class="areaBlog">
+    <div class="areaBlog" id="blogMove">
         <div class="container">
             <div class="blog">
                 <h1>Blog</h1>
