--- a/Site/public/Html/cadastro.html
+++ b/Site/public/Html/cadastro.html
@@ -18,12 +18,14 @@
                 <ul class="menu">
                     <li>Inicio</li>
                     <li>|</li>
-                    <li>Blog</li>
+                    <a href="#blogMove">
+                        <li>Blog</li>
+                    </a>
                     <li>|</li>
                     
                 </ul>
                 <div class="button">
-                    <button class="login" onclick="">Login</a></button>
+                    <button class="login" onclick=""><a href="../Html/Login.html">Login</a></button>
                     <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
@@ -31,7 +33,7 @@
     </div>
     </header>
 
-    <div class="banner">
+    <div class="fundo">
         <div class="container">
             <div class="caixa-formularioEsquerda">
                 <img src="../assets/Img/logo.svg" class="logo">
