--- a/Site/public/Html/ExercitarMente.html
+++ b/Site/public/Html/ExercitarMente.html
@@ -16,13 +16,14 @@
             <div class="navbar">
 
                 <ul class="menu">
-                    <li>Inicio</li>
-                    <li>|</li>
+                    <a href="../Html/Index.html">
+                        <li class="liStyle">Inicio</li>
+                    </a>
+                    <li >|</li>
                     <a href="#blogMove">
-                        <li>Blog</li>
+                        <li class="liStyle">Blog</li>
                     </a>
                     <li>|</li>
-                    
                 </ul>
                 <div class="button">
                     <button class="login" onclick=""><a href="../Html/Login.html">Login</a></button>
