--- a/Site/public/Html/Index.html
+++ b/Site/public/Html/Index.html
@@ -20,12 +20,12 @@
             <div class="navbar">
 
                 <ul class="menu">
-                    <a href="..//Html/Index.html">
-                        <li>Inicio</li>
+                    <a href="../Html/Index.html">
+                        <li class="liStyle">Inicio</li>
                     </a>
-                    <li>|</li>
+                    <li >|</li>
                     <a href="#blogMove">
-                        <li>Blog</li>
+                        <li class="liStyle">Blog</li>
                     </a>
                     <li>|</li>
                 </ul>
