--- a/Site/public/Html/cadastro.html
+++ b/Site/public/Html/cadastro.html
@@ -16,13 +16,14 @@
             <div class="navbar">
 
                 <ul class="menu">
-                    <li>Inicio</li>
-                    <li>|</li>
+                    <a href="../Html/Index.html">
+                        <li class="liStyle">Inicio</li>
+                    </a>
+                    <li >|</li>
                     <a href="#blogMove">
-                        <li>Blog</li>
+                        <li class="liStyle">Blog</li>
                     </a>
                     <li>|</li>
-                    
                 </ul>
                 <div class="button">
                     <button class="login" onclick=""><a href="../Html/Login.html">Login</a></button>
@@ -36,7 +37,7 @@
     <div class="fundo">
         <div class="container">
             <div class="caixa-formularioEsquerda">
-                <img src="../assets/Img/logo.svg" class="logo">
+                <img src="../assets/Img/logoBranco.svg" class="logo">
                 <h1>Health Fit</h1>
                 <img src="../assets/Img/Maromba.gif" class="maromba">
             </div>
