--- a/Site/public/Html/cadastro.html
+++ b/Site/public/Html/cadastro.html
@@ -37,7 +37,7 @@
     <div class="fundo">
         <div class="container">
             <div class="caixa-formularioEsquerda">
-                <img src="../assets/Img/logoBranco.svg" class="logo">
+                <img src="../assets/Img/logo.svg" class="logo">
                 <h1>Health Fit</h1>
                 <img src="../assets/Img/Maromba.gif" class="maromba">
             </div>
