Parametrizando o site com a Web-data-viz

--- a/Site/public/cadastro.html
+++ b/Site/public/cadastro.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/cadastroLogin.css">
+    <link rel="stylesheet" href="css/cadastroLogin.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="containerHeader">
-            <a href="..//Html/Index.html">
+            <a href="index.html">
                 <h1>Health fit</h1>
             </a>
             <div class="navbar">
 
                 <ul class="menu">
-                    <a href="../Html/Index.html">
+                    <a href="index.html">
                         <li class="liStyle">Inicio</li>
                     </a>
                     <li >|</li>
-                    <a href="#blogMove">
+                    <a href="index.html">
                         <li class="liStyle">Blog</li>
                     </a>
                     <li>|</li>
                 </ul>
                 <div class="button">
-                    <button class="login" onclick=""><a href="../Html/Login.html">Login</a></button>
-                    <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
+                    <button class="login" onclick=""><a href="login.html">Login</a></button>
+                    <button class="cadastro" onclick=""><a href="cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
         </div>
@@ -37,13 +37,13 @@
     <div class="fundo">
         <div class="container">
             <div class="caixa-formularioEsquerda">
-                <img src="../assets/Img/logo.svg" class="logo">
+                <img src="assets/Img/logo.svg" class="logo">
                 <h1>Health Fit</h1>
-                <img src="../assets/Img/Maromba.gif" class="maromba">
+                <img src="assets/Img/Maromba.gif" class="maromba">
             </div>
             <div class="caixa-formularioDireita">
                 <div class="caixaLogo">
-                    <img src="../assets/Img/logo.svg" class="logo">
+                    <img src="assets/Img/logo.svg" class="logo">
                 </div>
                 <div class="opcao">
                     <button onclick="">Cadastro</button>
@@ -80,6 +80,7 @@
     </div>
 </body>
 </html>
+
 <script>
     function cadastrar() {
         aguardar();
