--- a/Site/public/login.html
+++ b/Site/public/login.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="css/login.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="containerHeader">
-            <a href="..//Html/Index.html">
+            <a href="index.html">
                 <h1>Health fit</h1>
             </a>
             <div class="navbar">
 
                 <ul class="menu">
-                    <a href="../Html/Index.html">
+                    <a href="index.html">
                         <li class="liStyle">Inicio</li>
                     </a>
                     <li >|</li>
-                    <a href="#blogMove">
+                    <a href="index.html">
                         <li class="liStyle">Blog</li>
                     </a>
                     <li>|</li>
                 </ul>
                 <div class="button">
-                    <button class="login" onclick="">Login</a></button>
-                    <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
+                    <button class="login" onclick=""><a href="login.html">Login</a></button>
+                    <button class="cadastro" onclick=""><a href="cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
                     </div>
                    
                     <div class="campo">
-                        <button onclick="login()">Logar</button>
+                        <button onclick="entrar()">Logar</button>
                     </div>
                 </div>
             </div>
@@ -75,6 +75,7 @@
     </div>
 </body>
 </html>
+
 <script>
 
 
