--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/Index.css">
+    <link rel="stylesheet" href="css/Index.css">
     <title>Home</title>
 </head>
 <body>
     <!--Cabeçalho-->
     <header>
         <div class="containerHeader">
-            <div class="logo">
-
-                <a href="..//Html/Index.html">
-                    <h1>Health fit</h1>
-                </a>
-            </div>
+            <a href="index.html">
+                <h1>Health fit</h1>
+            </a>
             <div class="navbar">
 
                 <ul class="menu">
-                    <a href="../Html/Index.html">
+                    <a href="index.html">
                         <li class="liStyle">Inicio</li>
                     </a>
                     <li >|</li>
@@ -30,13 +27,12 @@
                     <li>|</li>
                 </ul>
                 <div class="button">
-                    <button class="login" onclick=""><a href="../Html/Login.html">Login</a></button>
-                    <button class="cadastro" onclick=""><a href="..//Html/cadastro.html">Cadastrar</a></button>
+                    <button class="login" onclick=""><a href="login.html">Login</a></button>
+                    <button class="cadastro" onclick=""><a href="cadastro.html">Cadastrar</a></button>
                 </div>
             </div>
         </div>
     </div>
-    
     </header>
     <!--Inicio-->
     <div class="banner">
@@ -58,10 +54,10 @@
             <div class="artigos">
            
                 <div class="artigoE">
-                    <a href="..//Html/AtividadeFisica.html">
+                    <a href="AtividadeFisica.html">
                         <ul>
                             <li>
-                                <img src="../assets/Img/VetorAcad.jpg" alt="" width="500px">
+                                <img src="assets/Img/VetorAcad.jpg" alt="" width="500px">
                                 <h2>A importância da atividade fisica</h2>
                             </li>
                         </ul>
@@ -69,21 +65,21 @@
                 </div>
                 <div class="artigoD">
                     <ul >
-                        <a href="..//Html/Alimento.html">
+                        <a href="Alimento.html">
                         <li>
-                            <img src="../assets/Img/VetorAlimento.jpg" alt="" width="130px">
+                            <img src="assets/Img/VetorAlimento.jpg" alt="" width="130px">
                             <h2>A importância da alimentação</h2>
                         </li>
                         </a>
-                        <a href="..//Html/ExercitarMente.html">
+                        <a href="ExercitarMente.html">
                         <li>
-                            <img src="../assets/Img/CerebroExer.jpg" alt="" width="130px">
+                            <img src="assets/Img/CerebroExer.jpg" alt="" width="130px">
                             <h2>Como exercicitar sua mente </h2>
                         </li>
                         </a>
-                        <a href="..//Html/MinhaHistoria.html">
+                        <a href="MinhaHistoria.html">
                             <li>
-                                <img src="../assets/Img/MinhaHis.jpg" alt="" width="130px">
+                                <img src="assets/Img/MinhaHis.jpg" alt="" width="130px">
                                 <h2>Minha Historia</h2>
                             </li> 
                         </a>
