Finalizndo a ultima pagina do site

--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -21,8 +21,12 @@
                         <li class="liStyle">Inicio</li>
                     </a>
                     <li >|</li>
-                    <a href="#blogMove">
+                    <a href="index.html">
                         <li class="liStyle">Blog</li>
+                    </a>
+                    <li >|</li>
+                    <a href="../public/Dashboard/Imc.html">
+                        <li class="liStyle">Calcule o Imc</li>
                     </a>
                     <li>|</li>
                 </ul>
