--- a/Site/public/Dashboard/cards.html
+++ b/Site/public/Dashboard/cards.html
@@ -20,38 +20,31 @@
 
 <body onload="validarSessao(), atualizacaoPeriodica()">
 
-    <div class="janela">
+    <header>
+        <div class="containerHeader">
+            <a href="index.html">
+                <h1>Health fit</h1>
+            </a>
+            <div class="navbar">
 
-
-        <div class="header-left dash-header">
-
-            <h1>AquaTech</h1>
-
-            <div class="hello">
-                <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
+                <ul class="menu">
+                    <a href="index.html">
+                        <li class="liStyle">Inicio</li>
+                    </a>
+                    <li >|</li>
+                    <a href="#blogMove">
+                        <li class="liStyle">Blog</li>
+                    </a>
+                    <li>|</li>
+                </ul>
+                <div class="button">
+                    <button class="login" onclick=""><a href="login.html">Login</a></button>
+                    <button class="cadastro" onclick=""><a href="cadastro.html">Cadastrar</a></button>
+                </div>
             </div>
-
-            <div class="btn-nav">
-                <h3>Aquários</h3>
-            </div>
-
-            <div class="btn-nav-white">
-                <a href="./dashboard.html">
-                    <h3>Gráficos</h3>
-                </a>
-            </div>
-
-            <div class="btn-nav-white">
-                <a href="./mural.html">
-                    <h3>Mural de Avisos</h3>
-                </a>
-            </div>
-
-            <div class="btn-logout" onclick="limparSessao()">
-                <h3>Sair</h3>
-            </div>
-
         </div>
+    </div>
+    </header>
 
         <div class="dash">
             <div class="regua">
