--- a/Site/public/MinhaHistoria.html
+++ b/Site/public/MinhaHistoria.html
@@ -23,6 +23,10 @@
                     <a href="index.html">
                         <li class="liStyle">Blog</li>
                     </a>
+                    <li >|</li>
+                    <a href="/public/Dashboard/Imc.html">
+                        <li class="liStyle">Calcule o Imc</li>
+                    </a>
                     <li>|</li>
                 </ul>
                 <div class="button">
@@ -33,7 +37,6 @@
         </div>
     </div>
     </header>
-
     <div class="container2">
         <div class="folha">
 
