Mandando pro banco

--- a/Site/public/Alimento.html
+++ b/Site/public/Alimento.html
@@ -24,10 +24,9 @@
                         <li class="liStyle">Blog</li>
                     </a>
                     <li >|</li>
-                    <a href="/public/Dashboard/Imc.html">
-                        <li class="liStyle">Calcule o Imc</li>
+                    <a href="Dashboard/imc.html">
+                        <li class="liStyle" id="simuir">Calcule o Imc</li>
                     </a>
-                    <li>|</li>
                 </ul>
                 <div class="button">
                     <button class="login" onclick=""><a href="login.html">Login</a></button>
