Finalizando alguns processos do site

--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -21,7 +21,7 @@
                         <li class="liStyle">Inicio</li>
                     </a>
                     <li >|</li>
-                    <a href="index.html">
+                    <a href="#blogMove">
                         <li class="liStyle">Blog</li>
                     </a>
                     <li >|</li>
@@ -38,12 +38,14 @@
     </div>
     </header>
     <!--Inicio-->
-    <div class="banner">
-        <div class="container">
-            <div class="frase">
-            <h2>Bem-vindo a Health Fit</h2> <br>
+    <div class="containerBanner">
+        <div class="banner">
+            <div class="container">
+                <div class="frase">
+                    <h2>Bem-vindo a Health Fit</h2> <br>
+                </div>
+                <span>O corpo <b>Alcança</b> o que a mente <b>Acredita!</b></span>
             </div>
-            <span>O corpo <b>Alcança</b> o que a mente <b>Acredita!</b></span>
         </div>
     </div>
 
