--- a/Site/public/MinhaHistoria.html
+++ b/Site/public/MinhaHistoria.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/ExerMente.css">
-    <title>Document</title>
+    <title>Minha Historia</title>
 </head>
 <body>
     <header>
@@ -43,7 +43,7 @@
                 <h1>Um Pouco sobre mim</h1>
             </div>
             <div class="texto">
-                <p>
+                <p>Bom tudo começo, la para os meus 14 anos, que eu já tinha acabado de entrar no ensino médio, e foi muito dificil, pois eu ja era um menino muito timido, e tinha muita vergonha do meu corpo pois eu ja tinha 95kg, e o ensino medio não ajudava muito, por que as pessoas era má, foi quando comecei a ter depressão, ficar isolado, sem vontade de fazer nada, de ir pa escola, de sair , tirar foto, eu não queria fazer nenhuma destas coisas, só ficava triste pelos cantos. Então depois do meu pai insistir muito comecei a fazer academia, mas eu nunca consegu manter academia, eu ia para academia um mês, um mês e meio no maximo e sempre parava, e foi assim por anos... e fo passando ano, fui engordando mais e mais, aos meus 16 anos eu ja tava com 105kg, ai quando entrou 2020 e chegou a pandemia foi de mal a pior, foi quando desandou tudo, cheguei a pesar 113kg, e pensa em um adolecente triste que eu era, e eu não aguentava mais isso, percebi que tinha que mudar e só eu poderia fazer isso por mim, mas agradeço ao meu pai pelo incentivo epor ter peo no meu pé pra fazer, então em setembro de 2021 foi quando entrei pra ficar firme, e depois de 1 ano atraves de exercicio e alimentação, consegui emagrecer 31kg, e hoje estou com 82kg, sou ua nova pessoa, um homem mais feliz, com auto estima boa. mas pretendo sempre ta evoluindo e não parar mais.   
                 </p>
             </div>
         </div>
