Mandando o imc pro banco

--- a/Site/public/AtividadeFisica.html
+++ b/Site/public/AtividadeFisica.html
@@ -25,12 +25,15 @@
                     </a>
                     <li >|</li>
                     <a href="Dashboard/imc.html">
-                        <li class="liStyle" id="simuir">Calcule o Imc</li>
+                        <li class="liStyle" id="simuir" style="display: none;">Calcule o Imc</li>
                     </a>
                 </ul>
                 <div class="button">
                     <button class="login" onclick=""><a href="login.html">Login</a></button>
                     <button class="cadastro" onclick=""><a href="cadastro.html">Cadastrar</a></button>
+                    <div style="display: none;" id="aparecer">
+                        <button class="sair" onclick=""><a href="login.html">Sair</a></button>
+                    </div>>
                 </div>
             </div>
         </div>
